@@ -1,22 +1,24 @@
 class AddDeviseTo<%= table_name.camelize %> < ActiveRecord::Migration
   def self.up
-    change_table :<%= table_name %> do |t|
+    change_table(:<%= table_name %>) do |t|
       t.database_authenticatable :null => false
       t.recoverable
       t.rememberable
       t.trackable
     
-    # t.encryptable
-    # t.confirmable
-    # t.lockable :lock_strategy => :<%= Devise.lock_strategy %>, :unlock_strategy => :<%= Devise.unlock_strategy %>
-    # t.token_authenticatable
+      # t.encryptable
+      # t.confirmable
+      # t.lockable :lock_strategy => :<%= Devise.lock_strategy %>, :unlock_strategy => :<%= Devise.unlock_strategy %>
+      # t.token_authenticatable
 
 <% for attribute in attributes -%>
       t.<%= attribute.type %> :<%= attribute.name %>
 <% end -%>
-      #Uncomment below if timestamps were not included in your original model.
-      t.timestamps
+
+      # Uncomment below if timestamps were not included in your original model.
+      # t.timestamps
     end
+
     add_index :<%= table_name %>, :email,                :unique => true
     add_index :<%= table_name %>, :reset_password_token, :unique => true
     # add_index :<%= table_name %>, :confirmation_token,   :unique => true
@@ -25,8 +27,8 @@ class AddDeviseTo<%= table_name.camelize %> < ActiveRecord::Migration
   end
 
   def self.down
-    #By default, we don't want to make any assumption about how to roll back a migration when your
-    #model already existed. Please edit below which fields you would like to remove in this migration.
+    # By default, we don't want to make any assumption about how to roll back a migration when your
+    # model already existed. Please edit below which fields you would like to remove in this migration.
     raise ActiveRecord::IrreversibleMigration   
   end
 end
